Fix error message after render adaptive card

--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "@azure/msal-browser": "^3.23.0",
+    "@azure/msal-react": "^2.0.22",
     "adaptivecards": "^3.0.4"
   },
   "devDependencies": {
